--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Categories\Edit.cshtml" />
     <Content Include="Views\Categories\Index.cshtml" />
     <Content Include="Views\Home\Kurumsal.cshtml" />
+    <Content Include="Views\Shared\Signature.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
