--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\ContactsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\TodoItemsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -259,6 +260,11 @@
     <Content Include="Views\Contacts\Details.cshtml" />
     <Content Include="Views\Contacts\Edit.cshtml" />
     <Content Include="Views\Contacts\Index.cshtml" />
+    <Content Include="Views\TodoItems\Create.cshtml" />
+    <Content Include="Views\TodoItems\Delete.cshtml" />
+    <Content Include="Views\TodoItems\Details.cshtml" />
+    <Content Include="Views\TodoItems\Edit.cshtml" />
+    <Content Include="Views\TodoItems\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
