--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MediaController.cs" />
+    <Compile Include="Controllers\SidesController.cs" />
     <Compile Include="Controllers\TodoItemsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -277,6 +278,11 @@
     <Content Include="Views\Media\Details.cshtml" />
     <Content Include="Views\Media\Edit.cshtml" />
     <Content Include="Views\Media\Index.cshtml" />
+    <Content Include="Views\Sides\Create.cshtml" />
+    <Content Include="Views\Sides\Delete.cshtml" />
+    <Content Include="Views\Sides\Details.cshtml" />
+    <Content Include="Views\Sides\Edit.cshtml" />
+    <Content Include="Views\Sides\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
