--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -5560,6 +5560,7 @@
     <Content Include="assets\assets\pages\scripts\widgets.min.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\image\AcıBademLogo.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
