--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -6003,6 +6003,7 @@
     <Content Include="Views\Departments\Edit.cshtml" />
     <Content Include="Views\Departments\Index.cshtml" />
     <Content Include="Views\Media\ExportToExcel.cshtml" />
+    <Content Include="Views\ApplicationUsers\ExportToExcel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
