--- a/TodoList/Web.config
+++ b/TodoList/Web.config
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <globalization culture="en-GB" uiCulture="en-GB"/>
+    <globalization culture="en-GB" uiCulture="en-GB" responseEncoding="utf-8" requestEncoding="utf-8"/>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
